--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,57 @@
+<div class="container mt-4 ">
+  <div class="d-flex gap-5 align-items-center">
+    <h1>Coding Factory</h1>
+    <h2>Introduction to Angular</h2>
+  </div>
+  <div class="bg-success p-2 text-light">
+    <h3>Welcome to Angular</h3>
+  </div>
+</div>
+
+<div class="container mt-4">
+  <p>Hello <strong>{{ name }}</strong></p>
+
+  <table class="table table-bordered w-50">
+    <tr>
+      <td class="fw-semibold text-end">First Name</td>
+      <td class="ps-2">{{person.givenName}}</td>
+    </tr>
+    <tr>
+      <td class="fw-semibold text-end">Last Name</td>
+      <td class="ps-2">{{person.surName}}</td>
+    </tr>
+    <tr>
+      <td class="fw-semibold text-end">Age</td>
+      <td class="ps-2">{{person.age}}</td>
+    </tr>
+    <tr>
+      <td class="fw-semibold text-end">Email</td>
+      <td class="ps-2">{{person.email}}</td>
+    </tr>
+  </table>
+</div>
+
+<div class="d-flex gap-5 text-nowrap">
+  <app-person-table></app-person-table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -7,7 +61,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
+<!-- <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -322,7 +376,7 @@
       </div>
     </div>
   </div>
-</main>
+</main> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
@@ -333,4 +387,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<router-outlet />
+<!-- <router-outlet /> -->
+
