--- a/src/app/components/simple-datatable/simple-datatable.component.html
+++ b/src/app/components/simple-datatable/simple-datatable.component.html
@@ -1,11 +1,11 @@
 <table class="table table-bordered table-striped text-wrap">
     <thead>
         <tr class="align-mid text-center small">
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Email</th>
-            <th>Education</th>
+            <th role="button" (click)="sortData('givenName')">First Name</th>
+            <th role="button" (click)="sortData('surName')">Last Name</th>
+            <th role="button" (click)="sortData('age')">Age</th>
+            <th role="button" (click)="sortData('email')">Email</th>
+            <th role="button" (click)="sortData('education')">Education</th>
         </tr>
     </thead>
     <tbody>
@@ -13,6 +13,7 @@
             <tr class="align-middle" (dblclick)="onPersonClicked(row)">
                 <td>{{row.givenName}}</td>
                 <td>{{row.surName}}</td>
+                <td>{{row.age}}</td>
                 <td>{{row.email}}</td>
                 <td>{{row.education}}</td>
             </tr>
