--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -37,9 +37,17 @@
       <td class="fw-semibold text-end">Email</td>
       <td class="ps-2">{{personInput?.email}}</td>
     </tr>
+    @if(isPerson()){
     <tr>
       <td class="fw-semibold text-end">Address</td>
       <td class="ps-2">{{personInput?.address}}</td>
     </tr>
+  }
+  @if(isEperson()){
+    <tr>
+      <td class="fw-semibold text-end">Address</td>
+      <td class="ps-2">{{personInput?.education}}</td>
+    </tr>
+  }
   </table>
 </div>
