finished template form

--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -40,13 +40,13 @@
     @if(isPerson()){
     <tr>
       <td class="fw-semibold text-end">Address</td>
-      <td class="ps-2">{{personInput?.address}}</td>
+      <td class="ps-2">{{addressOrEducation}}</td>
     </tr>
   }
-  @if(isEperson()){
+  @if(isEPerson()){
     <tr>
-      <td class="fw-semibold text-end">Address</td>
-      <td class="ps-2">{{personInput?.education}}</td>
+      <td class="fw-semibold text-end">Education</td>
+      <td class="ps-2">{{addressOrEducation}}</td>
     </tr>
   }
   </table>
