options in selection values

--- a/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
+++ b/src/app/components/eperson-reactive-form/eperson-reactive-form.component.html
@@ -35,5 +35,5 @@
     <button mat-flat-button color="primary" [disabled] = "form.invalid" (click)="onSubmit(form.value)">
         Submit
     </button>
-    <button>Set Value</button>
+    <button (click)="onSetValue()">Set Value</button>
 </div>
